<resources>
    <string name="app_name">Task</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="informe_todos_os_campos">Informe todos os campos</string>
    <string name="erro_generico">Algo de errado aconteceu. Tente novamente!!!</string>
    <string name="email_em_uso">Email ja esta em uso !!!</string>
    <string name="login">Entrar</string>
    <string name="login_error_msg">Usuario e/ ou senha incorretos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="descricao">Descrição</string>
    <string name="completa">Completa</string>
</resources>
